Create login and signup pages

--- a/frontend/src/components/Header/AuthorizationBlock/styles.module.sass
+++ b/frontend/src/components/Header/AuthorizationBlock/styles.module.sass
@@ -5,6 +5,12 @@
   grid-template-columns: 1fr 1fr
   margin-right: $margin
   height: 100%
+  a
+    text-decoration: none
+    color: $white-color
+    &:visited, &:active
+      text-decoration: none
+      color: $white-color
 
 .menu_item
   display: flex
