--- a/frontend/src/styles/reset.sass
+++ b/frontend/src/styles/reset.sass
@@ -15,7 +15,7 @@ time, mark, audio, video
   padding: 0
   border: 0
   vertical-align: baseline
-  font-family: "Custom Open Sans", sans-serif
+  font-family: 'Montserrat', sans-serif
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
