Create initial design

--- a/frontend/src/containers/LandingPage/styles.module.sass
+++ b/frontend/src/containers/LandingPage/styles.module.sass
@@ -5,6 +5,9 @@
 
 .slogan
   background-image: url("../../assets/landing.jpg")
+  background-repeat: no-repeat
+  background-position: center
+  background-size: cover
   height: calc(100vh - #{$header-height})
   display: flex
   justify-content: center
