--- a/frontend/src/components/Header/NavigationBlock/styles.module.sass
+++ b/frontend/src/components/Header/NavigationBlock/styles.module.sass
@@ -1,1 +1,43 @@
+@import "src/styles/variables"
+
 .navigation_container
+  display: flex
+  flex-direction: row
+  margin-right: $margin
+
+.menu_home
+  display: flex
+  justify-content: center
+  align-items: center
+  padding-right: 0.7rem
+  padding-left: 0.7rem
+
+  a
+    text-decoration: none
+    color: $white-color
+    display: flex
+    justify-content: center
+    align-items: center
+    padding-right: 1.3rem
+    padding-left: 1.3rem
+    border-radius: 30px
+    cursor: pointer
+
+.icon_menu
+  cursor: pointer
+  transition: 0.2s
+
+  &:hover
+    color: $orange-color !important
+
+.text_menu
+  transition: 0.2s
+
+  &:hover
+    box-shadow: 3px 0 7px $orange-color, -3px 0px 7px $orange-color, 0px 4px 7px $orange-color !important
+
+
+.user_icon
+  font-size: 2.5em !important
+
+
