--- a/frontend/src/containers/CoursePage/styles.module.sass
+++ b/frontend/src/containers/CoursePage/styles.module.sass
@@ -1,8 +1,33 @@
+@import 'src/styles/variables'
+
 .course_header
   display: flex
+  flex-direction: row
+  justify-content: space-between
+  margin-right: $margin
+
+.header_text
+  display: flex
   flex-direction: column
-  justify-items: center
-  align-content: center
-  background: url("../../assets/course.jpg") no-repeat
-  background-size: cover
-  min-height: 10rem
+  justify-content: center
+  margin-left: $margin
+  margin-right: $margin
+  flex-grow: 1
+  border-bottom: 1px solid $orange-color
+
+.image_container
+  border-top: 2px solid $gray-color
+  width: 12rem
+  height: 12rem
+  img
+    width: 100%
+    height: 100%
+    object-fit: cover
+
+.course_name
+  font-size: 2.3em
+  margin-bottom: 0.6rem
+  color: $orange-color
+
+.course_description
+  font-size: 1.1em
