Fetch real data from the server

--- a/frontend/src/containers/AuthForm/styles.module.sass
+++ b/frontend/src/containers/AuthForm/styles.module.sass
@@ -43,7 +43,7 @@
   font-family: 'Montserrat', sans-serif
   margin-top: 1rem
   &:hover
-    background-color: black
+    background-color: $black-color
     transition: 0.3s
 
 .auth_text
