--- a/frontend/src/containers/LandingPage/styles.module.sass
+++ b/frontend/src/containers/LandingPage/styles.module.sass
@@ -16,7 +16,7 @@
 .slogan_text
   background: rgba(240, 238, 238, 0.9)
   padding: 3rem 5rem
-  color: black
+  color: $black-color
   font-size: 1.1em
 
 .slogan_header
@@ -28,7 +28,7 @@
   margin-bottom: 1rem
 
 .quote_container
-  background-color: black
+  background-color: $black-color
   display: flex
   justify-content: center
   align-items: center
