--- a/frontend/src/components/CourseCard/styles.module.sass
+++ b/frontend/src/components/CourseCard/styles.module.sass
@@ -1,3 +1,30 @@
+@import 'src/styles/variables'
+
+$card-border: 0.2rem
+
+.course_container
+  border: solid $card-border transparent
+  box-shadow: 0 0 5px 3px rgba(245,191,118,0.4)
+
 .image_container
+  height: 10rem
+  margin-bottom: 1rem
   img
+    height: 100%
+    width: 100%
     object-fit: cover
+
+.course_header
+  font-size: 1.3em
+  padding-left: 1rem
+  padding-right: 1rem
+  margin-bottom: 0.5rem
+
+.course_students
+  font-size: 0.84em
+  font-style: italic
+  color: $orange-color
+  padding-left: 1rem
+  padding-right: 1rem
+  margin-bottom: 0.7rem
+
