--- a/frontend/src/components/CoursesBlock/styles.module.sass
+++ b/frontend/src/components/CoursesBlock/styles.module.sass
@@ -3,13 +3,17 @@
 .courses_block
   display: grid
   grid-template-columns: 1fr 1fr 1fr
+  column-gap: 1rem
+  row-gap: 0.9rem
+  margin-top: 1rem
+  margin-bottom: 2.5rem
 
 .courses_header
   display: flex
   flex-direction: column
 
 .header_text
-  font-size: 1.4em
+  font-size: 1.5em
   margin-bottom: 0.4rem
 
 .header_underline
