--- a/frontend/src/components/Header/styles.module.sass
+++ b/frontend/src/components/Header/styles.module.sass
@@ -6,7 +6,8 @@
   flex-direction: row
   justify-content: space-between
   align-items: center
-  background: black
+  background: $black-color-1
+  box-shadow: 0 -14px 40px -4px $blue-color
   a
     height: 100%
 
