--- a/frontend/src/components/CoursesBlock/styles.module.sass
+++ b/frontend/src/components/CoursesBlock/styles.module.sass
@@ -7,6 +7,9 @@
   row-gap: 0.9rem
   margin-top: 1rem
   margin-bottom: 2.5rem
+  a
+    text-decoration: none
+    color: $white-color
 
 .courses_header
   display: flex
