Finalize the design

--- a/frontend/src/components/CourseCard/styles.module.sass
+++ b/frontend/src/components/CourseCard/styles.module.sass
@@ -5,6 +5,7 @@ $card-border: 0.2rem
 .course_container
   border: solid $card-border transparent
   box-shadow: 0 0 5px 3px rgba(245,191,118,0.4)
+  background-color: $black-color
 
 .image_container
   height: 10rem
