--- a/frontend/src/containers/AuthForm/styles.module.sass
+++ b/frontend/src/containers/AuthForm/styles.module.sass
@@ -27,7 +27,7 @@
   padding: 3rem 4rem 3rem 4rem
 
 .auth_header
-  color: black
+  color: $black-color
   font-weight: 700
   text-align: center
   font-size: 1.5em
@@ -43,7 +43,7 @@
   font-family: 'Montserrat', sans-serif
   margin-top: 1rem
   &:hover
-    background-color: black
+    background-color: $black-color
     transition: 0.3s
 
 .auth_text
