--- a/frontend/src/containers/LandingPage/styles.module.sass
+++ b/frontend/src/containers/LandingPage/styles.module.sass
@@ -5,6 +5,9 @@
 
 .slogan
   background-image: url("../../assets/landing.jpg")
+  background-repeat: no-repeat
+  background-position: center
+  background-size: cover
   height: calc(100vh - #{$header-height})
   display: flex
   justify-content: center
@@ -13,7 +16,7 @@
 .slogan_text
   background: rgba(240, 238, 238, 0.9)
   padding: 3rem 5rem
-  color: black
+  color: $black-color
   font-size: 1.1em
 
 .slogan_header
@@ -25,7 +28,7 @@
   margin-bottom: 1rem
 
 .quote_container
-  background-color: black
+  background-color: $black-color
   display: flex
   justify-content: center
   align-items: center
