--- a/frontend/src/styles/_variables.sass
+++ b/frontend/src/styles/_variables.sass
@@ -2,3 +2,7 @@ $margin: 2rem
 $header-height: 4.5rem
 $white-color: #F0EEEE
 $blue-color: #28208c
+$orange-color: #F5BF76
+$gray-color: #4C4C4C
+$black-color: black
+$black-color-1: #0A0A0A
