--- a/frontend/src/containers/CoursePage/styles.module.sass
+++ b/frontend/src/containers/CoursePage/styles.module.sass
@@ -1,17 +1,17 @@
 @import 'src/styles/variables'
 
+.course_container
+  margin: 0 $margin 0 $margin
+
 .course_header
   display: flex
   flex-direction: row
   justify-content: space-between
-  margin-right: $margin
 
 .header_text
   display: flex
   flex-direction: column
   justify-content: center
-  margin-left: $margin
-  margin-right: $margin
   flex-grow: 1
   border-bottom: 1px solid $orange-color
 
@@ -31,3 +31,17 @@
 
 .course_description
   font-size: 1.1em
+
+.tags_container
+  display: flex
+  margin-top: 0.8rem
+  flex-direction: row
+  flex-wrap: wrap
+
+.navigation_container
+  display: flex
+  margin-top: 1rem
+
+.content_container
+  margin-top: 2rem
+
