--- a/frontend/src/components/Publication/styles.module.sass
+++ b/frontend/src/components/Publication/styles.module.sass
@@ -7,6 +7,7 @@
   border-radius: 30px
   background-color: $black-color-1
   padding: 1rem 1.2rem 1rem 1.2rem
+  margin-bottom: 1rem
 
 .colored_text
   display: flex
