Add people component design

--- a/frontend/src/styles/_variables.sass
+++ b/frontend/src/styles/_variables.sass
@@ -4,5 +4,6 @@ $white-color: #F0EEEE
 $blue-color: #28208c
 $orange-color: #F5BF76
 $gray-color: #4C4C4C
+$green-color: #4AB37A
 $black-color: black
 $black-color-1: #0A0A0A
