--- a/frontend/src/styles/_variables.sass
+++ b/frontend/src/styles/_variables.sass
@@ -3,7 +3,9 @@ $header-height: 4.5rem
 $white-color: #F0EEEE
 $blue-color: #28208c
 $orange-color: #F5BF76
+$transparent-orange-color: #F5BF76b9
 $gray-color: #4C4C4C
 $green-color: #4AB37A
+$transparent-green-color:#4ab3797e
 $black-color: black
 $black-color-1: #0A0A0A
