Add assignments subpage

--- a/frontend/src/components/PublicationForm/styles.module.sass
+++ b/frontend/src/components/PublicationForm/styles.module.sass
@@ -6,6 +6,17 @@
   margin-bottom: 1.5rem
 
 .input_container
+  background: none
+  color: inherit
+  font-family: inherit
+  font-size: inherit
+  padding: 1rem
+  margin-bottom: 0.5rem
+  border: 0.1rem solid $blue-color
+  border-radius: 20px
+  outline: none
+
+.text_container
   min-height: 7rem
   background: none
   color: inherit
@@ -21,3 +32,23 @@
   display: flex
   justify-content: flex-end
   margin-right: 0.7rem
+
+.grade_container
+  width: 5rem
+  background: none
+  color: inherit
+  font-family: inherit
+  font-size: inherit
+  padding: 1rem
+  border: 0.1rem solid $blue-color
+  border-radius: 20px
+  outline: none
+  margin: 0 1rem 0 1rem
+
+.deadline
+  margin: 0 1rem 0 1rem
+  input
+    color: $white-color!important
+
+.date
+  color: $white-color!important
