--- a/frontend/src/containers/ToDo/styles.module.sass
+++ b/frontend/src/containers/ToDo/styles.module.sass
@@ -10,4 +10,8 @@
 .todo_header
   text-align: center
 
-.todo_content
+.add_todo_wrapper
+  margin-bottom: 1rem
+
+.todo_item_wrapper 
+  margin-top: 1rem
