--- a/frontend/src/styles/_variables.sass
+++ b/frontend/src/styles/_variables.sass
@@ -2,8 +2,9 @@ $margin: 2rem
 $header-height: 4.5rem
 $white-color: #F0EEEE
 $blue-color: #28208c
+$transparent-red-color: #ff0000a4
 $orange-color: #F5BF76
-$transparent-orange-color: #F5BF76b9
+$transparent-orange-color: #f5be76a4
 $gray-color: #4C4C4C
 $green-color: #4AB37A
 $transparent-green-color:#4ab3797e
