--- a/frontend/src/containers/CreateCoursePage/styles.module.sass
+++ b/frontend/src/containers/CreateCoursePage/styles.module.sass
@@ -6,14 +6,16 @@
 .main_info
   padding-top: 2rem
   padding-bottom: 2rem
-  background: $dark-blue-color
-  box-shadow: 1px 0 1px $green-color, -1px 0 4px $green-color, 0 0 4px $green-color
   display: flex
   flex-direction: row
-  justify-content: center
   align-items: center
+  input
+    min-width: 20rem
 
 .image_container
+  width: 40vw
+  box-shadow: 1px 0 1px $blue-color, -1px 0 4px $blue-color, 0 0 4px $blue-color
+  margin-right: 3rem
   img
     width: 100%
     object-fit: cover
@@ -33,6 +35,7 @@
   flex-wrap: wrap
   div
     margin-right: 0.5rem
+    margin-top: 0.6rem
 
 .add_tag_button
   background: transparent
@@ -41,11 +44,7 @@
   color: inherit
   cursor: pointer
 
-.add_container
-  p
-    margin-bottom: 0.7rem
-
-.sponsors_container
+.sponsors_list_container
   display: flex
   flex-direction: row
   align-items: flex-start
@@ -56,3 +55,22 @@
     &:nth-child
       margin-bottom: 0.2rem
 
+.additional_info
+  display: flex
+  flex-direction: row
+  margin-bottom: 3rem
+
+.tags_container
+  margin-right: 3rem
+  width: 18rem
+  p
+    margin-bottom: 0.7rem
+
+.sponsors_container
+  p
+    margin-bottom: 0.7rem
+
+.existing_sponsors
+  margin-top: 2rem
+  margin-left: 2rem
+  width: 20rem
