--- a/frontend/src/containers/ToDo/styles.module.sass
+++ b/frontend/src/containers/ToDo/styles.module.sass
@@ -1,4 +1,3 @@
-
 .todo_list
   width: 500px
   padding-top: 3rem
@@ -13,5 +12,13 @@
 .add_todo_wrapper
   margin-bottom: 1rem
 
-.todo_item_wrapper 
+.todo_item_wrapper
   margin-top: 1rem
+
+.chart_container
+  margin-top: 5rem
+  display: flex
+  justify-content: center
+  align-items: center
+  svg
+    width: 20vw
